# artcraft-api

./: CLAUDE.md  Cargo.toml
.sqlx/: query-066c16a04112b0ee83a54e29d5f96125f7c90db89ec9bd16275172d14722a381.json  query-080bd6e83a5a783ce5da4a254f3bbe67991eb0f045c990a586c48b64ef46ab3d.json  query-097b8a8d02734c8c8e31dbb8a3bf4ace970693a2a0df2f05a31caf86b4d3d0ab.json  query-0d2eadc64240b9ce5348b3b238b0ae6229df21697c952b08e930d03f97414cf4.json  query-1246d346e63efa99516ab4efa2aec90e37322184237d94782f77cf7a7a14d53f.json  query-1359fb54af12d78251fe435b063771984ee00d74a71b5d29e9df267991f38522.json  query-14e63e59f7d550181126151029bcd17d08278196ba0ee4d32450c2567b1da26e.json  query-1703bc63ce65d98cbcad81d515cbcf211a943c533e38e887d2c12713c78b687d.json  query-1773939b9f98a452e61728eceed7a7e2936fc12e2e6027a732d56a1d5f2efbf0.json  query-1b69f192c3bb51bd249f97d37f209ae271d498bb46c978351b2c1d8759338bab.json  query-1c997019b7ed18059bc08d857918c3ce3f5e6ed56d358894cbc496d345566519.json  query-27cebaa36f0ec873f86cdf8fa994d499db1a5cc84d2c6fceb3587145eb2f9bec.json  query-29fe7f8464257537840d7f095ec01f850d79f970109549d14978fc3bed7cef32.json  query-2d49cfbafc29bce35f3e03135054c7521fb0182663aefa971245f91f33a6fc49.json  query-34afe8ddbf0fb5d746ec82827166348ae1a0734ca5986a7d696860efd90128ce.json  query-366bc2a90afff0e0ff6b15d39c6815bf50f116ebdf99485aa909a647d52809dd.json  query-381e13ab37a2f4ce39bd6db9d90202c301091376108f645a9bb5264a9cd113d7.json  query-3846628765bd34ea2ce01e15a0db732121ce473c5c542d0e971ad29b2b421193.json  query-386edf6842d78c963b0ab35a25b8d00f65abb529e2a5e4c206895ac9a807085a.json  query-3e5a71cedc31cc656177c8331c2de1d1d2d2eb310aabeb7e6238943b073f6998.json  query-4036dfd9d4e9e77e557776468c14b75f49170de1e55a1b9b9e83446a0c356e74.json  query-408c893a0ced805de4c3c6cfdf0c6a4bcc93dd1eaf98382522eae46e72eb3aa5.json  query-41cf2f8d64aa36fb930cc1bf8a46d37e0987b743438b44e1c55859fc6b6ee6a0.json  query-46662ffe56827f98f43968681bfaab2eaa6a73f017a92c3289777f49c115f839.json  query-489c6ef00507330fedbaf2b6e024ecf409a920efd85f75456829a8ed412d9bc3.json  query-516db34b6a642a2f7d7107f186905a79ad694c3c86f3078efc77bcaae7f39f3d.json  query-53c90f5230aa202aead37a224ec70e350172bc0ec4eeaebde22878ca4aa0f695.json  query-5611678b6c168208ea4da9ef0e3071758c9bb8d89b54e2d3f0fc84bd0a6c915f.json  (+59 more)
crates/api_clients/apiyi_client/: Cargo.toml
crates/api_clients/apiyi_client/src/: lib.rs
crates/api_clients/apiyi_client/src/creds/: api_key.rs
crates/api_clients/apiyi_client/src/error/: mod.rs
crates/api_clients/apiyi_client/src/requests/image/gpt_image_2_vip/: image_to_image.rs  text_to_image.rs
crates/api_clients/apiyi_client/src/requests/image/nano_banana_2/: image_to_image.rs  text_to_image.rs
crates/api_clients/artcraft/artcraft_api_keys/: Cargo.toml
crates/api_clients/artcraft/artcraft_api_keys/src/: lib.rs  parse_from_header_value.rs
crates/api_clients/bucket_client/: Cargo.toml
crates/api_clients/bucket_client/src/: bucket_client.rs  bucket_client_builder.rs  bucket_client_error.rs  lib.rs  object_name.rs
crates/api_clients/datadog_client/: Cargo.toml
crates/api_clients/datadog_client/src/: client.rs  creds.rs  error.rs  lib.rs
crates/api_clients/datadog_client/src/test_utils/: get_test_api_key.rs  mod.rs
crates/api_clients/google_sign_in/: Cargo.toml  README.md
crates/api_clients/google_sign_in/src/: decode_and_verify_token_claims.rs  lib.rs
crates/api_clients/google_sign_in/src/certs/: download_certs.rs  jwk_to_public_key.rs
crates/api_clients/google_sign_in/src/claims/: claims.rs
crates/api_clients/google_sign_in/src/error/: google_sign_in_error.rs  mod.rs
crates/api_clients/google_sign_in/src/jwt/: decode_jwt_header.rs
crates/api_clients/runninghub_client/: Cargo.toml
crates/api_clients/runninghub_client/src/: lib.rs
crates/api_clients/runninghub_client/src/creds/: api_key.rs
crates/api_clients/runninghub_client/src/error/: mod.rs
crates/api_clients/runninghub_client/src/polling/: mod.rs  poll_task.rs
crates/api_clients/runninghub_client/src/requests/image/: mod.rs
crates/api_clients/runninghub_client/src/requests/image/gpt_image_2/: image_to_image.rs  mod.rs  text_to_image.rs
crates/api_clients/runninghub_client/src/requests/image/nano_banana_2/: image_to_image.rs  text_to_image.rs
crates/api_clients/runninghub_client/src/requests/video/: mod.rs
crates/api_clients/runninghub_client/src/requests/video/grok_video/: image_to_video.rs  mod.rs  text_to_video.rs
crates/cli/production/db-backfill/: Cargo.toml
crates/cli/production/db-backfill/src/: args.rs  main.rs
crates/cli/production/db-backfill/src/operations/: mod.rs
crates/cli/production/db-backfill/src/operations/backfill_user_spend_events/: README.md  backfill_user_spend_events.rs  mod.rs  stripe_api.rs  sub_args.rs
crates/lib/metrics/: Cargo.toml
crates/lib/metrics/src/: builder.rs  collector.rs  lib.rs  queue.rs  sample.rs  worker.rs
crates/lib/opaque_cursors/: Cargo.toml
crates/lib/opaque_cursors/src/v1/: mod.rs
crates/lib/opaque_cursors/src/v2/: mod.rs  opaque_cursor_encoder_v2.rs  opaque_cursor_error_v2.rs  opaque_cursor_v2.rs
crates/lib/sha1_hash/: Cargo.toml
crates/lib/sha1_hash/src/: error.rs  lib.rs  sha1_hash_bytes_as_crockford.rs
crates/lib/video_info/: Cargo.toml
crates/lib/video_info/src/: dreamina_info.rs  error.rs  kling_info.rs  lib.rs  scan.rs  seedance_info.rs  sora_info.rs  veo_info.rs  video.rs
crates/service/job/user_spend_analytics_job/: Cargo.toml
crates/service/job/user_spend_analytics_job/config/: user-spend-analytics-job.development.env
crates/service/job/user_spend_analytics_job/src/: job_dependencies.rs  main.rs
crates/service/job/user_spend_analytics_job/src/http_server/: http_server_shared_state.rs
crates/service/job/user_spend_analytics_job/src/http_server/endpoints/: health_check_handler.rs
crates/service/job/user_spend_analytics_job/src/job/: alert_on_error.rs  backfill_daily_spends.rs  backfill_user_summaries.rs  main_loop.rs  mod.rs  reengagement_score.rs
crates/service/job/user_spend_analytics_job/src/startup/: build_pager.rs
(+2583 files in other folders)
