[package]
name = "google_sign_in"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
# NB: Public "google_sign_in" crate does not exist, so we're fine to use this internally.
name = "google_sign_in"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal

# External

# NB: jwt-simpe ordinarilly has a cmake dependency, "boring". Ignore that and use pure rust.
jwt-simple = { version = "0.12.10" , default-features=false, features=["pure-rust"] }
base64 = "0.13"

reqwest.workspace = true

# Serialization
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

[dev-dependencies]
test_utils = { path = "../../testing/test_utils" }
coarsetime = "0.1.34" # To set the clock for testing
