[package]
name = "opaque_cursors"
edition = "2021"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "opaque_cursors"
path = "src/lib.rs"

[dependencies]
base64.workspace = true
magic-crypt = "3.1.13"
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
