[package]
name = "artcraft_api_keys"
edition = "2024"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "artcraft_api_keys"
path = "src/lib.rs"

[dependencies]
# Hackari workspace (faster compile times)
workspace-build-acceleration.workspace = true
