[package]
name = "db-backfill"
publish = false
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]

[[bin]]
name = "db-backfill"
path = "src/main.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration = { workspace = true }

# Internal
datetimes = { path = "../../../lib/data/datetimes" }
easyenv = { path = "../../../lib/easyenv" }
enums = { path = "../../../schema/public/enums" }
errors = { path = "../../../lib/errors" }
mysql_queries = { path = "../../../schema/database/mysql_queries" }
tokens = { path = "../../../schema/public/tokens" }

# External
anyhow = "1.0.86"
chrono = { version = "0.4.22", features = ["serde"] }
clap = "4.4.8"
dotenv.workspace = true
log = "0.4.14"

# Bigger pieces
futures = { version = "0.3.17", features = ["thread-pool"] }
sqlx = { version = "0.7.4", features = [ "mysql", "runtime-tokio-rustls", "chrono" ] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

# Stripe is queried via plain REST (reqwest) with lenient serde structs — the
# typed SDK's miniserde parsing is too strict for production data variety.
# rustls 0.23 needs an explicit crypto provider (graph has both ring + aws-lc-rs).
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.108"

[dev-dependencies]
# None yet
